--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,1 +1,16 @@
-<p>header works!</p>
+<header class="header">
+  <div class="stats">
+    <div>
+      Moves: <span>{{ moves }}</span>
+    </div>
+    <div>
+      Pairs found: <span>{{ pairsFound }}</span>
+    </div>
+  </div>
+
+  <div class="title">Memory Game</div>
+
+  <div class="actions">
+    <button class="btn" (click)="navigateToStartScreen()">New Game</button>
+  </div>
+</header>
