implemented new game frame

--- a/src/app/new-game/new-game.component.html
+++ b/src/app/new-game/new-game.component.html
@@ -1,1 +1,5 @@
-<p>new-game works!</p>
+<section class="modal">
+  <div class="new-game">
+    <div class="header">Start a game</div>
+  </div>
+</section>
