--- a/src/app/new-game/new-game.component.css
+++ b/src/app/new-game/new-game.component.css
@@ -18,6 +18,7 @@
   padding: 30px 20px;
   align-items: center;
   flex-direction: column;
+  justify-content: center;
   background-color: rgba(89, 192, 143, 0.94);
   box-shadow:
     0px 9px 6px -9px rgba(221, 203, 203, 0.4),
@@ -30,4 +31,81 @@
   font-size: 2rem;
   margin-bottom: 35px;
   text-align: center;
+}
+
+.content {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+}
+
+.content * {
+  min-width: 300px;
+}
+
+.title {
+  color: #fff;
+  font-size: 1.4rem;
+  line-height: 40px;
+  margin-bottom: 5px;
+  letter-spacing: 1px;
+}
+
+.input-container {
+  min-width: 350px;
+  border-radius: 4px;
+  padding: 8px 6px 2px 6px;
+  border: 1px solid #303030;
+}
+
+input {
+  width: 100%;
+  border: none;
+  color: #fff;
+  outline: none;
+  font-size: 16px;
+  max-width: 100%;
+  margin-left: 4px;
+  box-shadow: none;
+  font-weight: 400;
+  line-height: 24px;
+  text-align: inherit;
+  background-color: transparent;
+}
+
+::placeholder {
+  color: #fff;
+}
+
+.max,
+.error {
+  text-align: center;
+  padding: 10px 4px 0 0;
+  color: rgb(214, 16, 16);
+}
+.min {
+  padding: 10px 0 0 4px;
+  color: rgb(238, 236, 127);
+}
+
+.footer {
+  width: 100%;
+  display: flex;
+  padding: 15px 0;
+  margin-top: 25px;
+  justify-content: center;
+}
+
+button:disabled {
+  cursor: not-allowed;
+}
+
+.modal-btn {
+  width: 30%;
+  color: black;
+  font-size: 15px;
+  line-height: 30px;
+  padding-bottom: 0;
+  background-color: #fff;
 }
