introduced store to components & spinner

--- a/src/app/board/board.component.html
+++ b/src/app/board/board.component.html
@@ -1,4 +1,9 @@
 <main class="board">
-  <app-card *ngFor="let card of deck$ | async" [card]="card"></app-card>
+  <app-spinner *ngIf="isLoading$ | async; else deck"></app-spinner>
+
+  <ng-template #deck>
+    <app-card *ngFor="let card of deck$ | async" [card]="card"></app-card>
+  </ng-template>
+
   <router-outlet></router-outlet>
 </main>
