leaderboard template base with spinner adn routing

--- a/src/app/leaderboard/leaderboard.component.html
+++ b/src/app/leaderboard/leaderboard.component.html
@@ -1,1 +1,16 @@
-<p>leaderboard works!</p>
+<section class="modal">
+  <div class="leaderboard">
+    <div class="header">Leaderboard</div>
+
+    <app-spinner *ngIf="false"></app-spinner>
+
+    <div class="content">
+      <div class="card">
+        <span id="place"></span>
+        <h4 class="name"></h4>
+        <span class="size">Deck size: </span>
+        <span class="moves">Moves taken:</span>
+      </div>
+    </div>
+  </div>
+</section>
