exrtended new game form with user

--- a/src/app/new-game/new-game.component.css
+++ b/src/app/new-game/new-game.component.css
@@ -44,6 +44,10 @@
   min-width: 300px;
 }
 
+.user-form {
+  margin-bottom: 30px;
+}
+
 .title {
   color: #fff;
   font-size: 1.4rem;
@@ -94,7 +98,7 @@ input {
   display: flex;
   padding: 15px 0;
   margin-top: 25px;
-  justify-content: center;
+  justify-content: space-evenly;
 }
 
 button:disabled {
