extracted shard styles

--- a/src/app/new-game/new-game.component.html
+++ b/src/app/new-game/new-game.component.html
@@ -1,5 +1,5 @@
-<section class="modal">
-  <div class="new-game">
+<section class="modal-wrapper">
+  <div class="modal new-game">
     <div class="header">Start a game</div>
 
     <form [formGroup]="gameForm" class="content" (ngSubmit)="onSubmit(gameForm)">
