--- a/src/styles.css
+++ b/src/styles.css
@@ -26,3 +26,72 @@ body {
   padding: 6px 10px 3px 10px;
   background-color: rgba(89, 192, 143, 0.94);
 }
+
+button:disabled {
+  cursor: not-allowed;
+}
+
+.input-container {
+  display: flex;
+  border-radius: 4px;
+  position: relative;
+  align-items: center;
+  padding: 8px 6px 2px 6px;
+  border: 1px solid #303030;
+  box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0);
+}
+
+input {
+  width: 100%;
+  border: none;
+  color: #fff;
+  outline: none;
+  font-size: 16px;
+  max-width: 100%;
+  margin-left: 4px;
+  box-shadow: none;
+  font-weight: 400;
+  line-height: 24px;
+  text-align: inherit;
+  background-color: transparent;
+}
+
+::placeholder {
+  color: #fff;
+}
+
+.modal-wrapper {
+  top: 0px;
+  left: 0px;
+  z-index: 113;
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  position: fixed;
+  align-items: center;
+  justify-content: center;
+  background-color: rgba(63, 60, 60, 0.8);
+}
+
+.modal {
+  width: 700px;
+  display: flex;
+  min-height: 375px;
+  padding: 30px 20px;
+  align-items: center;
+  flex-direction: column;
+  background-color: rgba(89, 192, 143, 0.94);
+  box-shadow:
+    0px 9px 6px -9px rgba(221, 203, 203, 0.4),
+    1px 2px 15px 3px rgba(191, 182, 182, 0.14),
+    0px 9px 46px 8px rgba(205, 192, 192, 0.22);
+}
+
+.modal-btn {
+  width: 30%;
+  color: black;
+  font-size: 15px;
+  line-height: 30px;
+  padding-bottom: 0;
+  background-color: #fff;
+}
