[after limit] added add random name generator

--- a/src/app/new-game/new-game.component.html
+++ b/src/app/new-game/new-game.component.html
@@ -5,7 +5,7 @@
     <form [formGroup]="gameForm" class="content" (ngSubmit)="onSubmit(gameForm)">
       <div class="user-form">
         <div class="title">
-          Please enter your name
+          Please enter your name, or we'll assign one for you
         </div>
 
         <div class="input-container">
