[after time limit] didnt add this somehow

--- a/src/app/leaderboard/leaderboard.component.html
+++ b/src/app/leaderboard/leaderboard.component.html
@@ -2,7 +2,7 @@
   <div class="modal leaderboard">
     <div class="header">
       <div></div>
-      <div class="title">LEADERBOARD</div>
+      <div class="title">{{ victorious ? 'VICTORY!!!' : 'LEADERBOARD' }}</div>
       <button class="btn modal-btn" (click)="navigateToStartScreen()">New game</button>
     </div>
 
