[after time limit] minor cleanup

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -11,7 +11,7 @@
   <div class="title">Memory Game</div>
 
   <div class="actions">
-    <button class="btn" (click)="navigateToStartScreen()">New Game</button>
+    <button class="btn" (click)="createNewGame()">New Game</button>
 
     <div>
       hi there, <span class="user" *ngIf="user$ | async as user">{{ user || '-' }}</span>
