--- a/src/app/new-game/new-game.component.html
+++ b/src/app/new-game/new-game.component.html
@@ -10,7 +10,7 @@
       The trick is to remember which cards are where.
     </p>
 
-    <form [formGroup]="gameForm" class="content" (ngSubmit)="onSubmit(gameForm)">
+    <form [formGroup]="gameForm" class="content">
       <div class="user-form">
         <div class="title">
           Please enter your name, or we'll assign one for you
